Fix errors in appointments controller
